# aw-watcher-agent

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  package.json  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
.pi/bindings/: CostUsage.ts  ModelUsage.ts  SessionEndRequest.ts  SessionHeartbeatRequest.ts  SessionStartRequest.ts  SessionUpdateRequest.ts  TokenUsage.ts
.pi/extensions/: aw-watcher.ts
src/: buckets.rs  client.rs  daemon.rs  events.rs  main.rs  shutdown_signal.rs
