[package]
name = "aw-watcher-agent"
version = "0.1.1"
edition = "2021"
description = "ActivityWatch watcher for code agent sessions — tracks session duration, models, token usage, and costs"
authors = ["wind_mask"]
license = "MIT"
repository = "https://github.com/wind-mask/aw-watcher-agent"
homepage = "https://github.com/wind-mask/aw-watcher-agent"

[dependencies]
aw-client-rust = "0.1"
aw-models = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
url = "2.5"
axum = "0.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
