[package]
name = "aw-watcher-agent"
version = "0.1.1"
edition = "2021"
description = "ActivityWatch watcher for code agent sessions — tracks session duration, models, token usage, and costs"
authors = ["wind_mask"]
license = "MIT"
repository = "https://github.com/wind-mask/aw-watcher-agent"
homepage = "https://github.com/wind-mask/aw-watcher-agent"

# Only ship source, license, changelog, and audit config to crates.io.
include = [
    "src/**/*.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/CHANGELOG.md",
    "/deny.toml",
]

[dependencies]
aw-client-rust = "0.1"
aw-models = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
url = "2.5"
axum = "0.8"
uuid = { version = "1.23", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
